# libobject

src/: CMakeLists.txt  class.nw  libobject.tex  object.nw  preamble.tex
